feat: password protection
