# src/modules/coreHttpApi/controllers/RelationshipTemplatesController.ts
@@ -97,7 +97,8 @@ export class RelationshipTemplatesController extends BaseController {
                 const qrCodeResult = await this.transportServices.relationshipTemplates.createTokenQRCodeForOwnTemplate({
                     templateId: id,
                     expiresAt: request.expiresAt,
-                    forIdentity: request.forIdentity
+                    forIdentity: request.forIdentity,
+                    passwordProtection: request.passwordProtection
                 });
                 return this.file(
                     qrCodeResult,
@@ -112,7 +113,8 @@ export class RelationshipTemplatesController extends BaseController {
                     templateId: id,
                     expiresAt: request.expiresAt,
                     ephemeral: request.ephemeral,
-                    forIdentity: request.forIdentity
+                    forIdentity: request.forIdentity,
+                    passwordProtection: request.passwordProtection
                 });
                 return this.created(jsonResult);
         }
